# nakshatra

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_ACTIVITY_SEARCH.md  IMPLEMENTATION_COMPLETE.md  NAKSHATRA_TARA_MAPPING.md  README.md  REQUIREMENTS_SUMMARY.md  UPDATE_SUMMARY.md  ephemeris.py  export_json.py  precompute.py  pyproject.toml
.github/workflows/: deploy.yml
docs/: ACTIVITIES_NORMALIZED_FINAL.md  ACTIVITY_DISPLAY_MAPPING.md  DESIGN_01_TIMELINE_SEGMENTS.md  DESIGN_02_RED_LIGHT_RULE.md  DESIGN_03_ACTIVITY_SEARCH.md  DESIGN_03_ACTIVITY_SEARCH_APPROACHES.md  DESIGN_03_REPRESENTATION_OPTIONS.md  DESIGN_04_SEARCHABLE_LOCATIONS.md  DESIGN_05_CORRECTED_ACTIVITIES_DATA.md  NORMALIZATION_ACTIVITIES_REVIEW.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/data/: nakshatra_transitions_2026.json  nakshatra_transitions_2027.json  nakshatra_transitions_2028.json  nakshatra_transitions_2029.json  nakshatra_transitions_2030.json  sunrise_nakshatras_2026.json  sunrise_nakshatras_2027.json  sunrise_nakshatras_2028.json  sunrise_nakshatras_2029.json  sunrise_nakshatras_2030.json  tithi_transitions_2026.json  tithi_transitions_2027.json  tithi_transitions_2028.json  tithi_transitions_2029.json  tithi_transitions_2030.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: DayCell.jsx  DayDetailModal.jsx  LocationSelector.jsx  LoginPage.jsx  MonthGrid.jsx  NakshatraSelector.jsx  TimelineSegment.jsx  TimelineSegments.jsx  YearCalendar.jsx
frontend/src/data/: calendar.js  (+3 more)
scripts/: download-deity-images.js
(+15 files in other folders)
